change name to tawasol

--- a/404.html
+++ b/404.html
@@ -3,15 +3,15 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Al-Sharq Co. - Kuwait's best cleaning solutions </title>
+    <title>Al-Tawasol Co. - Kuwait's best cleaning solutions </title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="Cleaning, Carpet Cleaning, Sofa Cleaning, Home Cleaning, Office Cleaning, Kuwait, Al-Sharq"
+    <meta content="Cleaning, Carpet Cleaning, Sofa Cleaning, Home Cleaning, Office Cleaning, Kuwait, Al-Tawasol"
         name="keywords">
     <meta
-        content="Al-Sharq Co., A Kuwait based professional cleaning service for homes and offices with 32+ years of experience."
+        content="Al-Tawasol Co., A Kuwait based professional cleaning service for homes and offices with 32+ years of experience."
         name="description">
 
-    <link rel="canonical" href="https://www.alsharqco.netlify.app" />
+    <link rel="canonical" href="https://www.altawasolco.netlify.app" />
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
@@ -107,9 +107,9 @@
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light shadow sticky-top p-0">
         <a href="index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
-            <!-- <h2 class="m-0 text-primary"><i class="fa fa-car me-3"></i>Al-Sharq Co.</h2> -->
+            <!-- <h2 class="m-0 text-primary"><i class="fa fa-car me-3"></i>Al-Tawasol Co.</h2> -->
             <div id="logo">
-                <img alt="alsharq-logo" src="./img/logo1.svg">
+                <img alt="altawasol-logo" src="./img/logo1.svg">
             </div>
         </a>
         <button aria-label="Mobile navbar toggler" type="button" class="navbar-toggler me-4" data-bs-toggle="collapse"
@@ -185,8 +185,8 @@
                     <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Jleeb-Al Shuyoukh, Kuwait</p>
                     <p class="mb-2"><i class="fa fa-phone-alt me-3"></i><a href="tel:+965 9989 1549">+965 9989 1549</a>
                     </p>
-                    <a href="mailto:support@alsharq.co" class="text-white mb-2"><i
-                            class="fa fa-envelope me-3"></i>support@alsharq.co</a>
+                    <a href="mailto:support@altawasol.co" class="text-white mb-2"><i
+                            class="fa fa-envelope me-3"></i>support@altawasol.co</a>
                     <div class="d-flex pt-2">
                         <a aria-label="Twitter account" class="btn btn-outline-light btn-social" href=""><i
                                 class="fab fa-twitter"></i></a>
@@ -228,7 +228,7 @@
             <div class="copyright">
                 <div class="row">
                     <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                        &copy; <a class="border-bottom" href="#">Al-Sharq Co.</a> All Right Reserved.
+                        &copy; <a class="border-bottom" href="#">Al-Tawasol Co.</a> All Right Reserved.
 
                         Designed By <a class="border-bottom" href="https://github.com/sarwar76200">sarwar76200</a>
                     </div>
