--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Al-Sharq Co. - Kuwait's best cleaning solutions </title>
+    <title>Al-Tawasol Co. - Kuwait's best cleaning solutions </title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="Cleaning, Carpet Cleaning, Sofa Cleaning, Home Cleaning, Office Cleaning, Kuwait, Al-Sharq"
+    <meta content="Cleaning, Carpet Cleaning, Sofa Cleaning, Home Cleaning, Office Cleaning, Kuwait, Al-Tawasol"
         name="keywords">
     <meta
-        content="Al-Sharq Co., A Kuwait based professional cleaning service for homes and offices with 32+ years of experience."
+        content="Al-Tawasol Co., A Kuwait based professional cleaning service for homes and offices with 32+ years of experience."
         name="description">
 
-    <link rel="canonical" href="https://www.alsharqco.netlify.app" />
+    <link rel="canonical" href="https://www.altawasolco.netlify.app" />
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
@@ -88,10 +88,12 @@
                 <div class="h-100 d-inline-flex align-items-center">
                     <a aria-label="Facebook page" class="btn btn-sm-square bg-white text-primary me-1" href=""><i
                             class="fab fa-facebook-f"></i></a>
-                    <a aria-label="Twitter account" class="btn btn-sm-square bg-white text-primary me-1" href=""><i class="fab fa-twitter"></i></a>
+                    <a aria-label="Twitter account" class="btn btn-sm-square bg-white text-primary me-1" href=""><i
+                            class="fab fa-twitter"></i></a>
                     <a aria-label="Linkedin profile" class="btn btn-sm-square bg-white text-primary me-1" href=""><i
                             class="fab fa-linkedin-in"></i></a>
-                    <a aria-label="Instagram profile" class="btn btn-sm-square bg-white text-primary me-0" href=""><i class="fab fa-instagram"></i></a>
+                    <a aria-label="Instagram profile" class="btn btn-sm-square bg-white text-primary me-0" href=""><i
+                            class="fab fa-instagram"></i></a>
                 </div>
             </div>
         </div>
@@ -105,12 +107,13 @@
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light shadow sticky-top p-0">
         <a href="index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
-            <!-- <h2 class="m-0 text-primary"><i class="fa fa-car me-3"></i>Al-Sharq Co.</h2> -->
+            <!-- <h2 class="m-0 text-primary"><i class="fa fa-car me-3"></i>Al-Tawasol Co.</h2> -->
             <div id="logo">
-                <img alt="alsharq-logo" src="./img/logo1.svg">
+                <img alt="altawasol-logo" src="./img/logo1.svg">
             </div>
         </a>
-        <button aria-label="Mobile navbar toggler" type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+        <button aria-label="Mobile navbar toggler" type="button" class="navbar-toggler me-4" data-bs-toggle="collapse"
+            data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
@@ -283,9 +286,10 @@
                 </div>
                 <div class="col-lg-6">
                     <h1 class="font-18 text-primary text-uppercase">About Us</h1>
-                    <h1 class="mb-4"><span class="text-primary">Al-Sharq Co.</span> Your Trusted Partner in Professional
+                    <h1 class="mb-4"><span class="text-primary">Al-Tawasol Co.</span> Your Trusted Partner in
+                        Professional
                         Cleaning Solutions</h1>
-                    <p class="mb-4"><span class="text-primary">Al-Sharq Co.</span> is your trusted partner for all
+                    <p class="mb-4"><span class="text-primary">Al-Tawasol Co.</span> is your trusted partner for all
                         cleaning
                         needs in the State of Kuwait, delivering excellence with over <span class="text-primary">32
                             years</span> of experience. Our
@@ -296,7 +300,8 @@
                     <p class="mb-4">
 
                         We take pride in our team of expert personnel who bring passion and precision to every job,
-                        ensuring that spaces are not just clean but revitalized. At Al-Sharq Co., we don't just clean —
+                        ensuring that spaces are not just clean but revitalized. At Al-Tawasol Co., we don't just clean
+                        —
                         we create healthier, more comfortable environments tailored to your unique requirements.
                     </p>
                     <div style="display: flex; flex-direction: column; gap: 10px;" class="mb-3 pb-3">
@@ -547,7 +552,7 @@
                 <div class="col-lg-6 py-5">
                     <div class="py-5">
                         <h1 class="text-white mb-4">Certified Cleaning Experts in Kuwait</h1>
-                        <p class="text-white mb-0">At Al-Sharq Co., we're proud to be recognized for excellence,
+                        <p class="text-white mb-0">At Al-Tawasol Co., we're proud to be recognized for excellence,
                             integrity, and service in the cleaning industry. With over 32 years of proven experience,
                             numerous industry certifications, and a team of highly skilled professionals, we set the
                             standard for quality cleaning in Kuwait. Whether residential, commercial, or industrial —
@@ -684,7 +689,7 @@
                     <h5 class="mb-0">Aisha Al-Mutairi</h5>
                     <p>Interior Designer</p>
                     <div class="testimonial-text bg-light text-center p-4">
-                        <p class="mb-0">"Al-Sharq Co. has transformed my home! Their team is respectful, professional,
+                        <p class="mb-0">"Al-Tawasol Co. has transformed my home! Their team is respectful, professional,
                             and leaves every corner sparkling. I always recommend them to friends and clients."</p>
                     </div>
                 </div>
@@ -693,7 +698,7 @@
                     <p>Boutique Owner</p>
                     <div class="testimonial-text bg-light text-center p-4">
                         <p class="mb-0">"What I love most is their attention to detail and eco-friendly approach.
-                            Al-Sharq Co. truly cares about quality and customer satisfaction."</p>
+                            Al-Tawasol Co. truly cares about quality and customer satisfaction."</p>
                     </div>
                 </div>
                 <div class="testimonial-item text-center">
@@ -719,8 +724,8 @@
                     <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Jleeb-Al Shuyoukh, Kuwait</p>
                     <p class="mb-2"><i class="fa fa-phone-alt me-3"></i><a href="tel:+965 9989 1549">+965 9989 1549</a>
                     </p>
-                    <a href="mailto:support@alsharq.co" class="text-white mb-2"><i
-                            class="fa fa-envelope me-3"></i>support@alsharq.co</a>
+                    <a href="mailto:support@altawasol.co" class="text-white mb-2"><i
+                            class="fa fa-envelope me-3"></i>support@altawasol.co</a>
                     <div class="d-flex pt-2">
                         <a aria-label="Twitter account" class="btn btn-outline-light btn-social" href=""><i
                                 class="fab fa-twitter"></i></a>
@@ -762,7 +767,7 @@
             <div class="copyright">
                 <div class="row">
                     <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                        &copy; <a class="border-bottom" href="#">Al-Sharq Co.</a> All Right Reserved.
+                        &copy; <a class="border-bottom" href="#">Al-Tawasol Co.</a> All Right Reserved.
 
                         Designed By <a class="border-bottom" href="https://github.com/sarwar76200">sarwar76200</a>
                     </div>
@@ -782,7 +787,8 @@
 
 
     <!-- Back to Top -->
-    <a aria-label="Back to top" href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
+    <a aria-label="Back to top" href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i
+            class="bi bi-arrow-up"></i></a>
 
 
     <!-- JavaScript Libraries -->
