--- a/about.html
+++ b/about.html
@@ -61,7 +61,7 @@
                     <a class="text-secondary" href="tel:+965 9989 1549">+965 9989 1549</a>
                 </small>
             </div>
-            <a href="/contact#send-message" style="padding: 5px; font-size: small;" class="btn btn-primary">Get A
+            <a href="/contact.html#send-message" style="padding: 5px; font-size: small;" class="btn btn-primary">Get A
                 Quote <i class="fa fa-arrow-right ms-1"></i></a>
         </div>
 
@@ -101,7 +101,7 @@
 
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light shadow sticky-top p-0">
-        <a href="index" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
+        <a href="index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
             <!-- <h2 class="m-0 text-primary"><i class="fa fa-car me-3"></i>Al-Tawasol Co.</h2> -->
             <div id="logo">
                 <img alt="altawasol-logo" src="./img/logo1.svg">
@@ -113,22 +113,22 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto p-4 p-lg-0">
-                <a href="index" class="nav-item nav-link">Home</a>
-                <a href="service" class="nav-item nav-link">Services</a>
+                <a href="index.html" class="nav-item nav-link">Home</a>
+                <a href="service.html" class="nav-item nav-link">Services</a>
                 <!-- <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Services</a>
                     <div class="dropdown-menu fade-up m-0">
-                        <a href="booking" class="dropdown-item">See All Services</a>
-                        <a href="team" class="dropdown-item">Technicians</a>
-                        <a href="testimonial" class="dropdown-item">Testimonial</a>
-                        <a href="404" class="dropdown-item">404 Page</a>
+                        <a href="booking.html" class="dropdown-item">See All Services</a>
+                        <a href="team.html" class="dropdown-item">Technicians</a>
+                        <a href="testimonial.html" class="dropdown-item">Testimonial</a>
+                        <a href="404.html" class="dropdown-item">404 Page</a>
                     </div>
                 </div> -->
 
-                <a href="about" class="nav-item nav-link active">About</a>
-                <a href="contact" class="nav-item nav-link">Contact</a>
+                <a href="about.html" class="nav-item nav-link active">About</a>
+                <a href="contact.html" class="nav-item nav-link">Contact</a>
             </div>
-            <a href="/contact" class="btn btn-primary py-4 px-lg-5 d-none d-lg-block">Get A Quote<i
+            <a href="/contact.html" class="btn btn-primary py-4 px-lg-5 d-none d-lg-block">Get A Quote<i
                     class="fa fa-arrow-right ms-3"></i></a>
         </div>
     </nav>
