--- a/about.html
+++ b/about.html
@@ -49,23 +49,6 @@
 
 
     <!-- Topbar Start -->
-    <div id="mobile-topbar" class="d-flex d-lg-none mobile-topbar px-4"
-        style="display: flex; justify-content: space-between; align-items: center;">
-        <i id="mobile-topbar-toggler" onclick="closeTopBar()" style="font-size: large;"
-            class="py-0 fa-regular fa-circle-xmark"></i>
-
-        <div style="display: flex; flex-direction: row; align-items: center; column-gap: 10px;">
-            <div>
-                <small>
-                    <i class="fa fa-phone-alt text-secondary me-1"></i>
-                    <a class="text-secondary" href="tel:+965 9989 1549">+965 9989 1549</a>
-                </small>
-            </div>
-            <a href="/contact.html#send-message" style="padding: 5px; font-size: small;" class="btn btn-primary">Get A
-                Quote <i class="fa fa-arrow-right ms-1"></i></a>
-        </div>
-
-    </div>
     <div class="container-fluid bg-light p-0">
         <div class="row gx-0 d-none d-lg-flex">
             <div class="col-lg-7 px-5 text-start">
@@ -96,21 +79,52 @@
             </div>
         </div>
     </div>
+
+    <div id="topbar-mobile">
+        <div class="flex flex-col mx-10px justify-between px-16px">
+            <!-- contact info -->
+            <div class="flex flex-col pt-10px">
+                <div class="">
+                    <small class="fa fa-map-marker-alt text-primary me-2"></small>
+                    <small>Jleeb-Al Shuyoukh, Kuwait</small>
+                </div>
+                <div class="">
+                    <small class="far fa-clock text-primary me-2"></small>
+                    <small>Sat - Thu : 08:00 AM - 10:00 PM</small>
+                </div>
+                <div class="">
+                    <small class="fa fa-phone-alt text-primary me-2"></small>
+                    <small><a class="text-secondary" href="tel:+965 9989 1549">+965 9989 1549</a></small>
+                </div>
+            </div>
+            <!-- toggler and quote -->
+            <div class="flex flex-row justify-between py-1">
+                <button id="topbar-mobile-toggler" class="btn"><i class="fa-solid fa-chevron-down"></i></button>
+                <a href="/contact.html#send-message" class="btn btn-primary font-small px-5px py-3px">
+                    Get A quote <i class="fa fa-arrow-right ms-1"></i>
+                </a>
+            </div>
+        </div>
+    </div>
     <!-- Topbar End -->
 
 
+
     <!-- Navbar Start -->
-    <nav class="navbar navbar-expand-lg bg-white navbar-light shadow sticky-top p-0">
+    <nav id="topbar-desktop" class="navbar navbar-expand-lg bg-white navbar-light shadow p-0">
         <a href="index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
-            <!-- <h2 class="m-0 text-primary"><i class="fa fa-car me-3"></i>Al-Tawasol Co.</h2> -->
             <div id="logo">
                 <img alt="altawasol-logo" src="./img/logo1.svg">
             </div>
         </a>
-        <button aria-label="Mobile navbar toggler" type="button" class="navbar-toggler me-4" data-bs-toggle="collapse"
-            data-bs-target="#navbarCollapse">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+        <div class="my-10px mr-25px">
+            <div id="mob-nav-container" class="d-flex d-lg-none" data-bs-toggle="collapse"
+                data-bs-target="#navbarCollapse" aria-label="Mobile navbar">
+                <div id="mob-nav1"></div>
+                <div id="mob-nav2"></div>
+                <div id="mob-nav3"></div>
+            </div>
+        </div>
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto p-4 p-lg-0">
                 <a href="index.html" class="nav-item nav-link">Home</a>
