--- a/index.html
+++ b/index.html
@@ -49,25 +49,6 @@
     <!-- Spinner End -->
 
     <!-- Topbar Start -->
-    <div id="mobile-topbar" class="d-flex d-lg-none mobile-topbar px-4"
-        style="display: flex; justify-content: space-between; align-items: center;">
-        <i id="mobile-topbar-toggler" onclick="closeTopBar()" style="font-size: large;"
-            class="py-0 fa-regular fa-circle-xmark"></i>
-
-        <div style="display: flex; flex-direction: row; align-items: center; column-gap: 10px;">
-            <div>
-                <small>
-                    <i class="fa fa-phone-alt text-secondary me-1"></i>
-                    <a class="text-secondary" href="tel:+965 9989 1549">+965 9989 1549</a>
-                </small>
-            </div>
-            <a href="/contact.html#send-message" style="padding: 5px; font-size: small;" class="btn btn-primary">Get A
-                Quote <i class="fa fa-arrow-right ms-1"></i></a>
-        </div>
-
-    </div>
-
-
     <div class="container-fluid bg-light p-0">
         <div class="row gx-0 d-none d-lg-flex">
             <div class="col-lg-7 px-5 text-start">
@@ -99,23 +80,51 @@
         </div>
     </div>
 
-
+    <div id="topbar-mobile">
+        <div class="flex flex-col mx-10px justify-between px-16px">
+            <!-- contact info -->
+            <div class="flex flex-col pt-10px">
+                <div class="">
+                    <small class="fa fa-map-marker-alt text-primary me-2"></small>
+                    <small>Jleeb-Al Shuyoukh, Kuwait</small>
+                </div>
+                <div class="">
+                    <small class="far fa-clock text-primary me-2"></small>
+                    <small>Sat - Thu : 08:00 AM - 10:00 PM</small>
+                </div>
+                <div class="">
+                    <small class="fa fa-phone-alt text-primary me-2"></small>
+                    <small><a class="text-secondary" href="tel:+965 9989 1549">+965 9989 1549</a></small>
+                </div>
+            </div>
+            <!-- toggler and quote -->
+            <div class="flex flex-row justify-between py-1">
+                <button id="topbar-mobile-toggler" class="btn"><i class="fa-solid fa-chevron-down"></i></button>
+                <a href="/contact.html#send-message" class="btn btn-primary font-small px-5px py-3px">
+                    Get A quote <i class="fa fa-arrow-right ms-1"></i>
+                </a>
+            </div>
+        </div>
+    </div>
     <!-- Topbar End -->
 
 
 
     <!-- Navbar Start -->
-    <nav class="navbar navbar-expand-lg bg-white navbar-light shadow sticky-top p-0">
+    <nav id="topbar-desktop" class="navbar navbar-expand-lg bg-white navbar-light shadow p-0">
         <a href="index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
-            <!-- <h2 class="m-0 text-primary"><i class="fa fa-car me-3"></i>Al-Tawasol Co.</h2> -->
             <div id="logo">
                 <img alt="altawasol-logo" src="./img/logo1.svg">
             </div>
         </a>
-        <button aria-label="Mobile navbar toggler" type="button" class="navbar-toggler me-4" data-bs-toggle="collapse"
-            data-bs-target="#navbarCollapse">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+        <div class="my-10px mr-25px">
+            <div id="mob-nav-container" class="d-flex d-lg-none" data-bs-toggle="collapse"
+                data-bs-target="#navbarCollapse" aria-label="Mobile navbar">
+                <div id="mob-nav1"></div>
+                <div id="mob-nav2"></div>
+                <div id="mob-nav3"></div>
+            </div>
+        </div>
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto p-4 p-lg-0">
                 <a href="index.html" class="nav-item nav-link active">Home</a>
@@ -150,8 +159,8 @@
                         <div class="container">
                             <div class="row align-items-center justify-content-center justify-content-lg-start">
                                 <div class="col-10 col-lg-7 text-center text-lg-start">
-                                    <h1 class="display-3 text-white mb-2 pb-3 animated slideInDown">Flawless Cleaning,
-                                        Every Time</h1>
+                                    <h2 class="display-3 text-white mb-2 pb-3 animated slideInDown">Flawless Cleaning,
+                                        Every Time</h2>
                                     <h2 class="subtitle-text text-white mb-5 animated slideInUp">
                                         Experience 5-star
                                         service tailored to your space — where spotless results meet expert care.</h2>
@@ -173,8 +182,8 @@
                             <div class="row align-items-center justify-content-center justify-content-lg-start">
                                 <div class="col-10 col-lg-7 text-center text-lg-start">
                                     <!-- <h6 class="text-white text-uppercase mb-3 animated slideInDown">Cleaning</h6> -->
-                                    <h1 class="display-3 text-white mb-4 pb-3 animated slideInDown">Trusted Experts,
-                                        Proven Results</h1>
+                                    <h2 class="display-3 text-white mb-4 pb-3 animated slideInDown">Trusted Experts,
+                                        Proven Results</h2>
                                     <h2 class="subtitle-text text-white mb-5 animated slideInUp">
                                         With over 32 years of experience, our team delivers precision, safety, and
                                         satisfaction in every project.</h2>
@@ -196,8 +205,8 @@
                             <div class="row align-items-center justify-content-center justify-content-lg-start">
                                 <div class="col-10 col-lg-7 text-center text-lg-start">
                                     <!-- <h6 class="text-white text-uppercase mb-3 animated slideInDown">Cleaning</h6> -->
-                                    <h1 class="display-3 text-white mb-4 pb-3 animated slideInDown">Driven by Quality,
-                                        Backed by Commitment</h1>
+                                    <h2 class="display-3 text-white mb-4 pb-3 animated slideInDown">Driven by Quality,
+                                        Backed by Commitment</h2>
                                     <h2 class="subtitle-text text-white mb-5 animated slideInUp">
                                         Our promise is simple: dependable service, unmatched standards, and complete
                                         peace of mind.</h2>
@@ -234,7 +243,7 @@
                     <div class="d-flex py-5 px-4">
                         <i class="fa fa-certificate fa-3x text-primary flex-shrink-0"></i>
                         <div class="ps-4">
-                            <h1 class="mb-3 font-20">Quality Assurance</h1>
+                            <h2 class="mb-3 font-20">Quality Assurance</h2>
                             <p>We're committed to delivering consistently high standards of cleanliness using top-grade
                                 products and proven techniques.</p>
                             <a class="text-secondary border-bottom" href="">Read More</a>
@@ -245,7 +254,7 @@
                     <div class="d-flex bg-light py-5 px-4">
                         <i class="fa fa-users-cog fa-3x text-primary flex-shrink-0"></i>
                         <div class="ps-4">
-                            <h1 class="mb-3 font-20">Skilled Professionals</h1>
+                            <h2 class="mb-3 font-20">Skilled Professionals</h2>
                             <p>Our team is trained, certified, and experienced — ensuring every task is completed with
                                 care and professionalism.</p>
                             <a class="text-secondary border-bottom" href="">Read More</a>
@@ -256,7 +265,7 @@
                     <div class="d-flex py-5 px-4">
                         <i class="fa fa-tools fa-3x text-primary flex-shrink-0"></i>
                         <div class="ps-4">
-                            <h1 class="mb-3 font-20">Advanced Tools & Technology</h1>
+                            <h2 class="mb-3 font-20">Advanced Tools & Technology</h2>
                             <p>We utilize modern equipment and innovative cleaning methods to ensure efficient and
                                 thorough results.</p>
                             <a class="text-secondary border-bottom" href="">Read More</a>
@@ -279,13 +288,13 @@
                             style="object-fit: cover;" alt="Person cleaning kitchen">
                         <div class="position-absolute top-0 end-0 mt-n4 me-n4 py-4 px-5"
                             style="background: rgba(0, 0, 0, .08);">
-                            <h1 class="display-4 text-white mb-0">32 <span class="fs-4">Years</span></h1>
+                            <h2 class="display-4 text-white mb-0">32 <span class="fs-4">Years</span></h2>
                             <h4 class="text-white">Experience</h4>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-6">
-                    <h1 class="font-18 text-primary text-uppercase">About Us</h1>
+                    <h2 class="font-18 text-primary text-uppercase">About Us</h2>
                     <h1 class="mb-4"><span class="text-primary">Al-Tawasol Co.</span> Your Trusted Partner in
                         Professional
                         Cleaning Solutions</h1>
@@ -421,8 +430,8 @@
     <div class="container-xxl service py-5">
         <div class="container">
             <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
-                <h1 class="font-18 text-primary text-uppercase">Our Services</h1>
-                <h1 class="mb-5">Explore Our Services</h1>
+                <h2 class="font-18 text-primary text-uppercase">Our Services</h2>
+                <h2 class="mb-5 font-40">Explore Our Services</h2>
             </div>
             <div class="row g-4 wow fadeInUp" data-wow-delay="0.3s">
                 <div class="col-lg-4">
@@ -551,7 +560,7 @@
             <div class="row gx-5">
                 <div class="col-lg-6 py-5">
                     <div class="py-5">
-                        <h1 class="text-white mb-4">Certified Cleaning Experts in Kuwait</h1>
+                        <h2 class="font-40 text-white mb-4">Certified Cleaning Experts in Kuwait</h2>
                         <p class="text-white mb-0">At Al-Tawasol Co., we're proud to be recognized for excellence,
                             integrity, and service in the cleaning industry. With over 32 years of proven experience,
                             numerous industry certifications, and a team of highly skilled professionals, we set the
@@ -562,7 +571,7 @@
                 <div class="col-lg-6">
                     <div class="bg-primary h-100 d-flex flex-column justify-content-center text-center p-5 wow zoomIn"
                         data-wow-delay="0.6s">
-                        <h1 class="text-white mb-4">Discuss with our experts</h1>
+                        <h2 class="text-white mb-4 font-40">Discuss with our experts</h2>
                         <form>
                             <div class="row g-3">
                                 <div class="col-12 col-sm-6">
@@ -681,8 +690,8 @@
     <div class="container-xxl py-5 wow fadeInUp" data-wow-delay="0.1s">
         <div class="container">
             <div class="text-center">
-                <h1 class="font-18 text-primary text-uppercase">Testimonial</h1>
-                <h1 class="mb-5">Our Clients Say!</h1>
+                <h2 class="font-18 text-primary text-uppercase">Testimonial</h2>
+                <h2 class="mb-5 font-40">Our Clients Say!</h2>
             </div>
             <div class="owl-carousel testimonial-carousel position-relative">
                 <div class="testimonial-item text-center">
