--- a/about.html
+++ b/about.html
@@ -99,7 +99,7 @@
             </div>
             <!-- toggler and quote -->
             <div class="flex flex-row justify-between py-1">
-                <button id="topbar-mobile-toggler" class="btn"><i class="fa-solid fa-chevron-down"></i></button>
+                <button aria-label="Mobile topbar toggler" id="topbar-mobile-toggler" class="btn"><i class="fa-solid fa-chevron-down"></i></button>
                 <a href="/contact.html#send-message" class="btn btn-primary font-small px-5px py-3px">
                     Get A quote <i class="fa fa-arrow-right ms-1"></i>
                 </a>
@@ -119,7 +119,7 @@
         </a>
         <div class="my-10px mr-25px">
             <div id="mob-nav-container" class="d-flex d-lg-none" data-bs-toggle="collapse"
-                data-bs-target="#navbarCollapse" aria-label="Mobile navbar">
+                data-bs-target="#navbarCollapse">
                 <div id="mob-nav1"></div>
                 <div id="mob-nav2"></div>
                 <div id="mob-nav3"></div>
