--- a/about.html
+++ b/about.html
@@ -99,7 +99,10 @@
             </div>
             <!-- toggler and quote -->
             <div class="flex flex-row justify-between py-1">
-                <button aria-label="Mobile topbar toggler" id="topbar-mobile-toggler" class="btn"><i class="fa-solid fa-chevron-down"></i></button>
+                <div id="chevron-button-container">
+                    <div id="chevron-right-bar"></div>
+                    <div id="chevron-left-bar"></div>
+                </div>
                 <a href="/contact.html#send-message" class="btn btn-primary font-small px-5px py-3px">
                     Get A quote <i class="fa fa-arrow-right ms-1"></i>
                 </a>
