--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         content="Al-Tawasol Co., A Kuwait based professional cleaning service for homes and offices with 32+ years of experience."
         name="description">
 
-    <link rel="canonical" href="https://www.altawasolco.netlify.app" />
+    <link rel="canonical" href="https://altawasolclean.com" />
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
