add clients and booking

--- a/client.html
+++ b/client.html
@@ -11,7 +11,7 @@
         content="Al-Tawasol Co., A Kuwait based professional cleaning service for homes and offices with 27+ years of experience."
         name="description">
 
-    <link rel="canonical" href="https://altawasolclean.com/service" />
+    <link rel="canonical" href="https://altawasolclean.com/client" />
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
 
@@ -130,8 +130,8 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto p-4 p-lg-0">
                 <a href="index.html" class="nav-item nav-link">Home</a>
-                <a href="service.html" class="nav-item nav-link active">Services</a>
-                <a href="client.html" class="nav-item nav-link">Clients</a>
+                <a href="service.html" class="nav-item nav-link">Services</a>
+                <a href="client.html" class="nav-item nav-link active">Clients</a>
                 <!-- <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Services</a>
                     <div class="dropdown-menu fade-up m-0">
@@ -156,12 +156,12 @@
     <div class="container-fluid page-header mb-5 p-0" style="background-image: url(img/carousel-bg-2.jpg);">
         <div class="container-fluid page-header-inner py-5">
             <div class="container text-center">
-                <h1 class="display-3 text-white mb-3 animated slideInDown">Services</h1>
+                <h1 class="display-3 text-white mb-3 animated slideInDown">Clients</h1>
                 <nav aria-label="breadcrumb">
                     <ol class="breadcrumb justify-content-center text-uppercase">
                         <li class="breadcrumb-item"><a href="/">Home</a></li>
                         <!-- <li class="breadcrumb-item"><a href="#">Pages</a></li> -->
-                        <li class="breadcrumb-item text-white active" aria-current="page">Services</li>
+                        <li class="breadcrumb-item text-white active" aria-current="page">Clients</li>
                     </ol>
                 </nav>
             </div>
@@ -170,8 +170,52 @@
     <!-- Page Header End -->
 
 
+
+
+    <!-- Testimonial Start -->
+    <div class="container-xxl py-5 wow fadeInUp" data-wow-delay="0.1s">
+        <div class="container">
+            <div class="text-center">
+                <h6 class="text-primary text-uppercase">Showcase</h6>
+                <h1 class="mb-4">Our Clients</h1>
+            </div>
+            <p class="mb-5">Over the years, we've had the privilege of working with a wide variety of clients—including
+                residential
+                homeowners, corporate offices, retail spaces, and hospitality venues. Our commitment to consistent
+                quality, reliability, and care has earned the trust of businesses and families who rely on us to keep
+                their environments spotless, healthy, and welcoming every day.</p>
+            <div class="owl-carousel testimonial-carousel position-relative">
+                <div class="p-4 testimonial-item flex justify-center items-center">
+                    <img class="bg-light" src="img/client-1.png" style="width: auto; height: 200px">
+                </div>
+                <div class="p-4 testimonial-item flex justify-center items-center">
+                    <img class="bg-light" src="img/client-2.png" style="width: auto; height: 200px">
+                </div>
+                <div class="p-4 testimonial-item flex justify-center items-center">
+                    <img class="bg-light" src="img/client-3.jpg" style="width: auto; height: 200px">
+                </div>
+                <div class="p-4 testimonial-item flex justify-center items-center">
+                    <img class="bg-light" src="img/client-4.png" style="width: auto; height: 200px">
+                </div>
+                <div class="p-4 testimonial-item flex justify-center items-center">
+                    <img class="bg-light" src="img/client-5.jpg" style="width: auto; height: 200px">
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Testimonial End -->
+
+
+
+
+
+
+
+
+
+
     <!-- Service Start -->
-    <div class="container-xxl service py-5">
+    <!-- <div class="container-xxl service py-5">
         <div class="container">
             <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
                 <h1 class="font-18 text-primary text-uppercase">Our Services</h1>
@@ -294,7 +338,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- Service End -->
 
 
@@ -357,12 +401,15 @@
     <!-- Booking End -->
 
 
+
+
+
     <!-- Testimonial Start -->
     <div class="container-xxl py-5 wow fadeInUp" data-wow-delay="0.1s">
         <div class="container">
             <div class="text-center">
-                <h1 class="font-18 text-primary text-uppercase">Testimonial</h1>
-                <h1 class="mb-5">Our Clients Say!</h1>
+                <h2 class="font-18 text-primary text-uppercase">Testimonial</h2>
+                <h2 class="mb-5 font-40">What out clients say</h2>
             </div>
             <div class="owl-carousel testimonial-carousel position-relative">
                 <div class="testimonial-item text-center">
