--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     <meta content="Cleaning, Carpet Cleaning, Sofa Cleaning, Home Cleaning, Office Cleaning, Kuwait, Al-Tawasol"
         name="keywords">
     <meta
-        content="Al-Tawasol Co., A Kuwait based professional cleaning service for homes and offices with 32+ years of experience."
+        content="Al-Tawasol Co., A Kuwait based professional cleaning service for homes and offices with 27+ years of experience."
         name="description">
 
 
@@ -133,6 +133,7 @@
             <div class="navbar-nav ms-auto p-4 p-lg-0">
                 <a href="index.html" class="nav-item nav-link">Home</a>
                 <a href="service.html" class="nav-item nav-link">Services</a>
+                <a href="client.html" class="nav-item nav-link">Clients</a>
                 <!-- <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Services</a>
                     <div class="dropdown-menu fade-up m-0">
@@ -197,7 +198,8 @@
                             <div class="bg-light d-flex flex-column justify-content-center p-4">
                                 <h5 class="text-uppercase">Office Hours</h5>
                                 <h6 class="text">Saturday - Thursday:</h6>
-                                <p class="mb-4">08:00 AM - 10:00 PM</p>
+                                <p class="">08:00 AM - 10:00 PM</p>
+                                <h6 class="text">Friday: Closed</h6>
                             </div>
                         </div>
                         <div class="col-md-4">
@@ -205,7 +207,9 @@
                                 <h5 class="text-uppercase">Social</h5>
                                 <a href="https://wa.me/+96599891549" class="mb-2"><i
                                         class="fa-brands fa-whatsapp me-3"></i>+965 9989 1549</a>
-                                <a href="https://www.instagram.com/altawasolclean" class="mb-2"><i
+                                <a href="https://wa.me/+96599590470" class="mb-2"><i
+                                        class="fa-brands fa-whatsapp me-3"></i>+965 9959 0470</a>
+                                <a href="https://www.instagram.com/altawasolclean_" class="mb-2"><i
                                         class="fa-brands fa-instagram me-3"></i>Al-Tawasol Co.</a>
                             </div>
                         </div>
@@ -227,30 +231,33 @@
                             satisfaction is our priority.
                         </p>
 
-                        <form>
+                        <form action="https://formspree.io/f/xgvybpvv" method="POST">
                             <div class="row g-3">
                                 <div class="col-md-6">
                                     <div class="form-floating">
-                                        <input type="text" class="form-control" id="name" placeholder="Your Name">
+                                        <input name="name" type="text" class="form-control" id="name"
+                                            placeholder="Your Name">
                                         <label for="name">Your Name</label>
                                     </div>
                                 </div>
                                 <div class="col-md-6">
                                     <div class="form-floating">
-                                        <input type="email" class="form-control" id="email" placeholder="Your Email">
+                                        <input name="email" type="email" class="form-control" id="email"
+                                            placeholder="Your Email">
                                         <label for="email">Your Email</label>
                                     </div>
                                 </div>
                                 <div class="col-12">
                                     <div class="form-floating">
-                                        <input type="text" class="form-control" id="subject" placeholder="Subject">
+                                        <input name="subject" type="text" class="form-control" id="subject"
+                                            placeholder="Subject">
                                         <label for="subject">Subject</label>
                                     </div>
                                 </div>
                                 <div class="col-12">
                                     <div class="form-floating">
-                                        <textarea class="form-control" placeholder="Leave a message here" id="message"
-                                            style="height: 100px"></textarea>
+                                        <textarea name="message" class="form-control" placeholder="Leave a message here"
+                                            id="message" style="height: 100px"></textarea>
                                         <label for="message">Message</label>
                                     </div>
                                 </div>
