--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta content="Cleaning, Carpet Cleaning, Sofa Cleaning, Home Cleaning, Office Cleaning, Kuwait, Al-Tawasol"
         name="keywords">
     <meta
-        content="Al-Tawasol Co., A Kuwait based professional cleaning service for homes and offices with 32+ years of experience."
+        content="Al-Tawasol Co., A Kuwait based professional cleaning service for homes and offices with 27+ years of experience."
         name="description">
 
     <link rel="canonical" href="https://altawasolclean.com" />
@@ -132,6 +132,7 @@
             <div class="navbar-nav ms-auto p-4 p-lg-0">
                 <a href="index.html" class="nav-item nav-link active">Home</a>
                 <a href="service.html" class="nav-item nav-link">Services</a>
+                <a href="client.html" class="nav-item nav-link">Clients</a>
                 <!-- <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Services</a>
                     <div class="dropdown-menu fade-up m-0">
@@ -188,7 +189,7 @@
                                     <h2 class="display-3 text-white mb-4 pb-3 animated slideInDown">Trusted Experts,
                                         Proven Results</h2>
                                     <h2 class="subtitle-text text-white mb-5 animated slideInUp">
-                                        With over 32 years of experience, our team delivers precision, safety, and
+                                        With over 27 years of experience, our team delivers precision, safety, and
                                         satisfaction in every project.</h2>
                                     <!-- <a href="./service.html"
                                         class="btn btn-primary py-3 px-5 animated slideInDown">Learn More<i
@@ -291,7 +292,7 @@
                             style="object-fit: cover;" alt="Person cleaning kitchen">
                         <div class="position-absolute top-0 end-0 mt-n4 me-n4 py-4 px-5"
                             style="background: rgba(0, 0, 0, .08);">
-                            <h2 class="display-4 text-white mb-0">32 <span class="fs-4">Years</span></h2>
+                            <h2 class="display-4 text-white mb-0">27 <span class="fs-4">Years</span></h2>
                             <h4 class="text-white">Experience</h4>
                         </div>
                     </div>
@@ -303,7 +304,7 @@
                         Cleaning Solutions</h1>
                     <p class="mb-4"><span class="text-primary">Al-Tawasol Co.</span> is your trusted partner for all
                         cleaning
-                        needs in the State of Kuwait, delivering excellence with over <span class="text-primary">32
+                        needs in the State of Kuwait, delivering excellence with over <span class="text-primary">27
                             years</span> of experience. Our
                         commitment to
                         quality, professionalism, and innovation has made us a preferred choice for clients across
@@ -395,7 +396,7 @@
             <div class="row g-4">
                 <div class="col-md-6 col-lg-3 text-center wow fadeIn" data-wow-delay="0.1s">
                     <i class="fa fa-wand-magic-sparkles fa-2x text-white mb-3"></i>
-                    <h2 class="text-white mb-2" data-toggle="counter-up">32</h2>
+                    <h2 class="text-white mb-2" data-toggle="counter-up">27</h2>
                     <p class="text-white mb-0">Years of Experience</p>
                 </div>
                 <div class="col-md-6 col-lg-3 text-center wow fadeIn" data-wow-delay="0.3s">
@@ -417,11 +418,11 @@
                 <div class="col-md-6 col-lg-3 text-center wow fadeIn" data-wow-delay="0.7s">
                     <i class="fa fa-check-circle fa-2x text-white mb-3"></i>
                     <div class="flex flex-row items-center justify-center">
-                        <h2 class="text-white mb-2" data-toggle="counter-up">5000</h2>
+                        <h2 class="text-white mb-2" data-toggle="counter-up">10000</h2>
                         <h2 class="text-white mb-2">+</h2>
                     </div>
 
-                    <p class="text-white mb-0">Compleate Projects</p>
+                    <p class="text-white mb-0">Complete Projects</p>
                 </div>
             </div>
         </div>
@@ -565,7 +566,7 @@
                     <div class="py-5">
                         <h2 class="font-40 text-white mb-4">Certified Cleaning Experts in Kuwait</h2>
                         <p class="text-white mb-0">At Al-Tawasol Co., we're proud to be recognized for excellence,
-                            integrity, and service in the cleaning industry. With over 32 years of proven experience,
+                            integrity, and service in the cleaning industry. With over 27 years of proven experience,
                             numerous industry certifications, and a team of highly skilled professionals, we set the
                             standard for quality cleaning in Kuwait. Whether residential, commercial, or industrial —
                             your space is in the safest hands.</p>
@@ -574,37 +575,39 @@
                 <div class="col-lg-6">
                     <div class="bg-primary h-100 d-flex flex-column justify-content-center text-center p-5 wow zoomIn"
                         data-wow-delay="0.6s">
-                        <h2 class="text-white mb-4 font-40">Discuss with our experts</h2>
-                        <form>
+                        <h2 class="text-white mb-4 font-40">Book for a service</h2>
+                        <form action="https://formspree.io/f/mqabogaj" method="POST">
                             <div class="row g-3">
                                 <div class="col-12 col-sm-6">
-                                    <input type="text" class="form-control border-0" placeholder="Your Name"
+                                    <input name="name" type="text" class="form-control border-0" placeholder="Your Name"
                                         style="height: 55px;">
                                 </div>
                                 <div class="col-12 col-sm-6">
-                                    <input type="email" class="form-control border-0" placeholder="Your Email"
-                                        style="height: 55px;">
+                                    <input name="phone" type="text" class="form-control border-0"
+                                        placeholder="Your Phone" style="height: 55px;">
                                 </div>
                                 <div class="col-12 col-sm-6">
-                                    <select class="form-select border-0" style="height: 55px;">
+                                    <select name="service" class="form-select border-0" style="height: 55px;">
                                         <option selected>Select A Service</option>
-                                        <option value="1">Service 1</option>
-                                        <option value="2">Service 2</option>
-                                        <option value="3">Service 3</option>
+                                        <option value="Carpet Cleaning">Carpet Cleaning</option>
+                                        <option value="Floor Cleaning">Floor Cleaning</option>
+                                        <option value="Sofa Cleaning">Sofa Cleaning</option>
                                     </select>
                                 </div>
                                 <div class="col-12 col-sm-6">
                                     <div class="date" id="date1" data-target-input="nearest">
-                                        <input type="text" class="form-control border-0 datetimepicker-input"
+                                        <input name="date" type="text"
+                                            class="form-control border-0 datetimepicker-input"
                                             placeholder="Service Date" data-target="#date1" data-toggle="datetimepicker"
                                             style="height: 55px;">
                                     </div>
                                 </div>
                                 <div class="col-12">
-                                    <textarea class="form-control border-0" placeholder="Special Request"></textarea>
+                                    <textarea name="description" class="form-control border-0"
+                                        placeholder="Description"></textarea>
                                 </div>
                                 <div class="col-12">
-                                    <button class="btn btn-secondary w-100 py-3" type="submit">Get a quote</button>
+                                    <button class="btn btn-secondary w-100 py-3" type="submit">Book Order</button>
                                 </div>
                             </div>
                         </form>
