--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
     <meta content="Cleaning, Carpet Cleaning, Sofa Cleaning, Home Cleaning, Office Cleaning, Kuwait, Al-Tawasol"
         name="keywords">
     <meta
-        content="Al-Tawasol Co., A Kuwait based professional cleaning service for homes and offices with 32+ years of experience."
+        content="Al-Tawasol Co., A Kuwait based professional cleaning service for homes and offices with 27+ years of experience."
         name="description">
 
     <link rel="canonical" href="https://altawasolclean.com/about" />
@@ -132,6 +132,7 @@
             <div class="navbar-nav ms-auto p-4 p-lg-0">
                 <a href="index.html" class="nav-item nav-link">Home</a>
                 <a href="service.html" class="nav-item nav-link">Services</a>
+                <a href="client.html" class="nav-item nav-link">Clients</a>
                 <!-- <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Services</a>
                     <div class="dropdown-menu fade-up m-0">
@@ -223,7 +224,7 @@
                             style="object-fit: cover;" alt="Person cleaning kitchen">
                         <div class="position-absolute top-0 end-0 mt-n4 me-n4 py-4 px-5"
                             style="background: rgba(0, 0, 0, .08);">
-                            <h1 class="display-4 text-white mb-0">32 <span class="fs-4">Years</span></h1>
+                            <h1 class="display-4 text-white mb-0">27 <span class="fs-4">Years</span></h1>
                             <h4 class="text-white">Experience</h4>
                         </div>
                     </div>
@@ -235,7 +236,7 @@
                         Cleaning Solutions</h1>
                     <p class="mb-4"><span class="text-primary">Al-Tawasol Co.</span> is your trusted partner for all
                         cleaning
-                        needs in the State of Kuwait, delivering excellence with over <span class="text-primary">32
+                        needs in the State of Kuwait, delivering excellence with over <span class="text-primary">27
                             years</span> of experience. Our
                         commitment to
                         quality, professionalism, and innovation has made us a preferred choice for clients across
@@ -327,7 +328,7 @@
             <div class="row g-4">
                 <div class="col-md-6 col-lg-3 text-center wow fadeIn" data-wow-delay="0.1s">
                     <i class="fa fa-wand-magic-sparkles fa-2x text-white mb-3"></i>
-                    <h2 class="text-white mb-2" data-toggle="counter-up">32</h2>
+                    <h2 class="text-white mb-2" data-toggle="counter-up">27</h2>
                     <p class="text-white mb-0">Years of Experience</p>
                 </div>
                 <div class="col-md-6 col-lg-3 text-center wow fadeIn" data-wow-delay="0.3s">
@@ -349,11 +350,11 @@
                 <div class="col-md-6 col-lg-3 text-center wow fadeIn" data-wow-delay="0.7s">
                     <i class="fa fa-check-circle fa-2x text-white mb-3"></i>
                     <div class="flex flex-row items-center justify-center">
-                        <h2 class="text-white mb-2" data-toggle="counter-up">5000</h2>
+                        <h2 class="text-white mb-2" data-toggle="counter-up">10000</h2>
                         <h2 class="text-white mb-2">+</h2>
                     </div>
 
-                    <p class="text-white mb-0">Compleate Projects</p>
+                    <p class="text-white mb-0">Complete Projects</p>
                 </div>
             </div>
         </div>
